注明各个库的作用

--- a/app/src/CMakeLists.txt
+++ b/app/src/CMakeLists.txt
@@ -22,6 +22,7 @@ find_library(
 set(JNI_LIBS_DIR ${CMAKE_SOURCE_DIR}/main/ffmpeg/${ANDROID_ABI})
 
 #添加库文件
+#工具库（大部分库都需要这个库的支持）
 add_library(
         avutil
         SHARED
@@ -32,7 +33,7 @@ set_target_properties(
         PROPERTIES IMPORTED_LOCATION
         ${JNI_LIBS_DIR}/libavutil-56.so
 )
-#
+#音频采样数据格式转换
 add_library(swresample
         SHARED
         IMPORTED )
@@ -40,7 +41,7 @@ add_library(swresample
 set_target_properties(swresample
         PROPERTIES IMPORTED_LOCATION
         ${JNI_LIBS_DIR}/libswresample-3.so )
-#
+#视频像素格式转换
 add_library(swscale
         SHARED
         IMPORTED )
@@ -48,7 +49,7 @@ add_library(swscale
 set_target_properties(swscale
         PROPERTIES IMPORTED_LOCATION
         ${JNI_LIBS_DIR}/libswscale-5.so )
-#
+#编解码（最重要的库）
 add_library(avcodec
         SHARED
         IMPORTED )
@@ -56,7 +57,7 @@ add_library(avcodec
 set_target_properties(avcodec
         PROPERTIES IMPORTED_LOCATION
         ${JNI_LIBS_DIR}/libavcodec-58.so )
-#
+#封装格式处理
 add_library(avformat
         SHARED
         IMPORTED )
@@ -64,7 +65,7 @@ add_library(avformat
 set_target_properties(avformat
         PROPERTIES IMPORTED_LOCATION
         ${JNI_LIBS_DIR}/libavformat-58.so )
-#
+#滤镜特效处理
 add_library(avfilter
         SHARED
         IMPORTED )
@@ -72,7 +73,7 @@ add_library(avfilter
 set_target_properties(avfilter
         PROPERTIES IMPORTED_LOCATION
         ${JNI_LIBS_DIR}/libavfilter-7.so )
-#
+#各种设备的输入输出
 add_library(avdevice
         SHARED
         IMPORTED )
