添加了rgb、yuv像素处理单元

--- a/app/src/CMakeLists.txt
+++ b/app/src/CMakeLists.txt
@@ -18,6 +18,8 @@ add_library(
         SHARED
         main/cpp/av-lib.c
         main/cpp/avcode_info.c
+        main/cpp/jni_util.c
+        main/cpp/decoder.c
 )
 
 
